--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "WebChat - 网页内容增强问答助手",
+    "name": "ElecAI - 电费智能问答助手",
     "version": "1.0",
-    "description": "基于当前网页内容的AI增强问答系统",
+    "description": "电费智能问答助手",
     "icons": {
         "16": "icons/icon16.png",
         "32": "icons/icon32.png",
